--- a/app/src/main/res/layout/activity_balloon.xml
+++ b/app/src/main/res/layout/activity_balloon.xml
@@ -14,36 +14,58 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@drawable/bg_circle"
-        android:orientation="horizontal">
+        android:background="@drawable/bg_circle">
 
-        <LinearLayout
+        <!--<ImageView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:scaleType="centerInside"-->
+            <!--android:src="@drawable/bg_circle" />-->
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/header_height"
             android:background="@drawable/top">
 
-            <Button
-                android:id="@+id/开始"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/share_btn"
+                android:layout_width="@dimen/header_btn_start_width"
+                android:layout_height="@dimen/header_btn_start_height"
+                android:layout_centerVertical="true"
                 android:layout_marginBottom="@dimen/header_btn_margin_bottom"
-                android:layout_marginLeft="@dimen/header_btn_margin_left"
-                android:layout_marginRight="@dimen/header_btn_margin_right"
-                android:layout_marginTop="@dimen/header_btn_margin_top" />
-        </LinearLayout>
+                android:layout_marginLeft="@dimen/header_btn_share_margin_left"
+                android:layout_marginRight="@dimen/header_btn_share_margin_right"
+                android:layout_marginTop="@dimen/header_btn_margin_top"
+                android:scaleType="centerInside"
+                android:src="@drawable/btn_share" />
 
-        <LinearLayout
+            <ImageView
+                android:id="@+id/again_btn"
+                android:layout_width="@dimen/header_btn_start_width"
+                android:layout_height="@dimen/header_btn_start_height"
+                android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/header_btn_margin_bottom"
+                android:layout_marginLeft="@dimen/header_btn_again_margin_left"
+                android:layout_marginRight="@dimen/header_btn_again_margin_right"
+                android:layout_marginTop="@dimen/header_btn_margin_top"
+                android:scaleType="centerInside"
+                android:src="@drawable/btn_play_again" />
+        </RelativeLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <com.ogaclejapan.arclayout.ArcLayout
-                android:id="@id/arc_layout"
+                android:id="@+id/arc_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal|top"
                 app:arc_axisRadius="@dimen/layout_child_offset_small"
                 app:arc_origin="center"
                 app:arc_radius="@dimen/layout_radius_small">
@@ -112,34 +134,40 @@
                     android:scaleType="centerInside"
                     android:src="@drawable/balloon_yellow" />
             </com.ogaclejapan.arclayout.ArcLayout>
-        </LinearLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
+            android:layout_gravity="bottom"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/my_record"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/bottom_btn_width"
+                android:layout_height="@dimen/bottom_btn_height"
+                android:layout_marginBottom="@dimen/bottom_btn_bottom_margin"
+                android:layout_weight="1"
                 android:scaleType="centerInside"
                 android:src="@drawable/btn_record" />
 
             <ImageView
                 android:id="@+id/global_rank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/bottom_btn_width"
+                android:layout_height="@dimen/bottom_btn_height"
+                android:layout_marginBottom="@dimen/bottom_btn_bottom_margin"
+                android:layout_weight="1"
                 android:scaleType="centerInside"
                 android:src="@drawable/btn_rank" />
 
             <ImageView
                 android:id="@+id/demo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/bottom_btn_width"
+                android:layout_height="@dimen/bottom_btn_height"
+                android:layout_marginBottom="@dimen/bottom_btn_bottom_margin"
+                android:layout_weight="1"
                 android:scaleType="centerInside"
                 android:src="@drawable/btn_demo" />
         </LinearLayout>
-    </LinearLayout>
+    </FrameLayout>
 </RelativeLayout>
